--- a/feedback_help.html
+++ b/feedback_help.html
@@ -14,7 +14,7 @@
     <div class="container-fluid" >
         <div class="navbar-nav me-auto mb-4 mb-lg-0">
             <a class="container navbar-brand" href="index.html">
-                <img src="img/OM_LOGO.jpg" alt="logo.png not found" height="40" width="50" class="d-inline-block align-top">
+                <img src="img/OM_LOGO.png" alt="logo.png not found" height="100" width="170" class="d-inline-block align-top">
             </a>
         </div>
         <div class="container position-relative">
@@ -254,7 +254,7 @@
 </section> <br><br>
 <!--FOOTER-------------------------------------------------------->
 
-            <footer style="background-color: black; color: aliceblue;">
+            <footer style="background-color: black; background-color: aliceblue !important;">
               <div class="container" ><br>
                 <div class="row">
                   <div class="col-sm center " style="text-align: center;">
