--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fluid" >
         <div class="navbar-nav me-auto mb-4 mb-lg-0">
             <a class="container navbar-brand" href="index.html">
-                <img src="img/OM_LOGO.jpg" alt="logo.png not found" height="40" width="50" class="d-inline-block align-top">
+                <img src="img/OM_LOGO.png" alt="logo.png not found" height="100" width="170" class="d-inline-block align-top">
             </a>
         </div>
         <div class="container position-relative">
@@ -121,7 +121,7 @@
 
 <!--FOUNDER-------------------------------------------------------->
           <br><br>
-            <h2 style="text-align: center;">Founder</h2><br><br>
+            <h2 style="text-align: center;">How Gray Products are manufactured</h2><br><br>
             <section  id="founder" >
 
                 <div id="founder_details" class="container position-relative">
@@ -129,16 +129,14 @@
                           <div class="col">
                             <div style="align-items: center;" class="container">
 
-                              <iframe width="560" height="315" src="https://www.youtube.com/embed/QoiVf68Dnjk" frameborder="0"
+                              <iframe width="560" height="315" src="https://youtube.com/embed/QHgNoSYlhYs" frameborder="0"
                                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loop  >
                               </iframe><br><br>
                           </div>
                         </div>
                           <div class="col"  style="align-content: center;text-align: justify;">
                             <p >
-                                <em>Valorant is a free-to-play multiplayer tactical first-person shooter developed and published by Riot Games,
-                                for Microsoft Windows. Announced under the codename Project A in October 2019, the game began a closed beta
-                                with limited access on April 7, 2020, and was fully released on June 2, 2020</em>
+                                <em>Cotton is a natural fibre grown on a plant related to the commonly-found garden species hibiscus. Cotton seeds are planted in spring and the plant grows into green, bushy shrubs about one metre in height. During the ginning process, the lint is separated from the seeds and is then pressed into rectangular bales.</em>
                             </p>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, vero praesentium. Molestias adipisci consequatur tempora obcaecati voluptas repellat qui sit ex dicta libero fugit aut, sunt est corrupti odit nam!</p>
                           </div>
@@ -146,9 +144,7 @@
                 </div><br><br><br>
 
 
-
-
-<p></p>
+<!-- Managment Team--------------------------------->
 <h3 align="center">Managment Team</h3>
 <div class="container">
      <table width="1000px" align="center">
@@ -188,11 +184,7 @@
      </table>
      </div>
 <div class="container">
-
-
 <section class="section pb-5" >
-
-
   <!--Section heading-->
   <h2 class="section-heading h1 pt-4">Contact us</h2>
   <!--Section description-->
@@ -298,7 +290,7 @@
 
 <!--FOOTER-------------------------------------------------------->
 
-            <footer style="background-color: black; color: aliceblue;">
+            <footer style="background-color: black; background-color: aliceblue !important;">
               <div class="container" ><br>
                 <div class="row">
                   <div class="col-sm center " style="text-align: center;">
