--- a/feedback_help.html
+++ b/feedback_help.html
@@ -254,21 +254,21 @@
 </section> <br><br>
 <!--FOOTER-------------------------------------------------------->
 
-            <footer style="background-color: black; background-color: aliceblue !important;">
+            <footer style="background-color: black; background-color: #86c5da !important;">
               <div class="container" ><br>
                 <div class="row">
                   <div class="col-sm center " style="text-align: center;">
-                    <a href="#" style="color: skyblue;">Terms & Condition        </a><br>
-                    <a href="#" style="color: skyblue;">Privacy Policy     </a><br><br>
+                    <a href="#" style="color: black;">Terms & Condition        </a><br>
+                    <a href="#" style="color: black;">Privacy Policy     </a><br><br>
                   </div>
                   <div class="col-sm  center " style="text-align: center;">
-                    <a href="#" style="color: skyblue;">About  </a><br>
-                        <a href="#contact_us" style="color: skyblue;">Contact us        </a><br><br>
+                    <a href="about.html" style="color: black;">About  </a><br>
+                        <a href="contact.html" style="color: black;">Contact us        </a><br><br>
 
                   </div>
                   <div class="col-sm  center " style="text-align: center;">
-                    <a href="Complain.html" style="color: skyblue;">Contact Us   </a><br>
-                    <a href="#" style="color: skyblue;">&copy;Om Sagar Textile    </a><br><br>
+                    <a href="Complain.html"style="color: black;">Complain Us   </a><br>
+                    <a href="index.html" style="color: black;">Om Sagar Textile    </a><br><br>
                   </div>
                 </div>
               </div>
