--- a/grey_products.html
+++ b/grey_products.html
@@ -10,9 +10,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <style media="screen">
+        body{
+          background-color:aliceblue;
+        }
+    </style>
 </head>
  <!--Our Body tag atarts here-->
-
+<body>
  <!--NAVIGATIONBAR----------------------------------------------------------->
  <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: #0075A2;color: aliceblue; " >
    <div class="container-fluid" >
@@ -248,21 +253,21 @@
 
     <!--FOOTER-------------------------------------------------------->
 
-                <footer style="background-color: black; background-color: aliceblue !important;">
+                <footer style="background-color: black; background-color: #86c5da !important;">
                   <div class="container" ><br>
                     <div class="row">
                       <div class="col-sm center " style="text-align: center;">
-                        <a href="#" style="color: skyblue;">Terms & Condition        </a><br>
-                        <a href="#" style="color: skyblue;">Privacy Policy     </a><br><br>
+                        <a href="#" style="color: black;">Terms & Condition        </a><br>
+                        <a href="#" style="color: black;">Privacy Policy     </a><br><br>
                       </div>
                       <div class="col-sm  center " style="text-align: center;">
-                        <a href="#" style="color: skyblue;">About  </a><br>
-                            <a href="#contact_us" style="color: skyblue;">Contact us        </a><br><br>
+                        <a href="about.html" style="color: black;">About  </a><br>
+                            <a href="contact.html" style="color: black;">Contact us        </a><br><br>
 
                       </div>
                       <div class="col-sm  center " style="text-align: center;">
-                        <a href="Complain.html" style="color: skyblue;">Contact Us   </a><br>
-                        <a href="#" style="color: skyblue;">&copy;Om Sagar Textile    </a><br><br>
+                        <a href="Complain.html"style="color: black;">Complain Us   </a><br>
+                        <a href="index.html" style="color: black;">Om Sagar Textile    </a><br><br>
                       </div>
                     </div>
                   </div>
