--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="css/index.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <style media="screen">
+        body{
+          background-color:aliceblue;
+        }
+    </style>
   </head>
   <body>
   <!--NAVIGATIONBAR----------------------------------------------------------->
@@ -74,7 +79,7 @@
 </nav>
 <!--corousal--------------------------------------------------------------->
 
-    <div class="container" style="border: 5mm solid white;">
+    <div class="container" style="border: 5mm solid aliceblue;">
         <div class="mb-lg-4 center">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -290,21 +295,21 @@
 
 <!--FOOTER-------------------------------------------------------->
 
-            <footer style="background-color: black; background-color: aliceblue !important;">
+            <footer style="background-color: black; background-color: #86c5da !important;">
               <div class="container" ><br>
                 <div class="row">
                   <div class="col-sm center " style="text-align: center;">
-                    <a href="#" style="color: skyblue;">Terms & Condition        </a><br>
-                    <a href="#" style="color: skyblue;">Privacy Policy     </a><br><br>
+                    <a href="#" style="color: black;">Terms & Condition        </a><br>
+                    <a href="#" style="color: black;">Privacy Policy     </a><br><br>
                   </div>
                   <div class="col-sm  center " style="text-align: center;">
-                    <a href="#" style="color: skyblue;">About  </a><br>
-                        <a href="#contact_us" style="color: skyblue;">Contact us        </a><br><br>
+                    <a href="about.html" style="color: black;">About  </a><br>
+                        <a href="contact.html" style="color: black;">Contact us        </a><br><br>
 
                   </div>
                   <div class="col-sm  center " style="text-align: center;">
-                    <a href="Complain.html" style="color: skyblue;">Contact Us   </a><br>
-                    <a href="#" style="color: skyblue;">&copy;Om Sagar Textile    </a><br><br>
+                    <a href="Complain.html"style="color: black;">Complain Us   </a><br>
+                    <a href="index.html" style="color: black;">Om Sagar Textile    </a><br><br>
                   </div>
                 </div>
               </div>
