--- a/shopping.html
+++ b/shopping.html
@@ -10,8 +10,13 @@
     <!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+    <style media="screen">
+        body{
+          background-color:aliceblue;
+        }
+    </style>
 </head>
+
 <body>
 
   <!--NAVIGATIONBAR----------------------------------------------------------->
@@ -156,26 +161,28 @@
   </div>
 
 <br><br><br><br><br>
-<!--footer------------------------------------------------------------------------------------------>
-<footer style="background-color: black; background-color: aliceblue !important;">
-    <div class="container" ><br>
-      <div class="row">
-        <div class="col-sm center " style="text-align: center;">
-          <a href="#" style="color: skyblue;">Terms & Condition        </a><br>
-          <a href="#" style="color: skyblue;">Privacy Policy     </a><br><br>
-        </div>
-        <div class="col-sm  center " style="text-align: center;">
-          <a href="#" style="color: skyblue;">About  </a><br>
-              <a href="#contact_us" style="color: skyblue;">Contact us        </a><br><br>
+<!--FOOTER-------------------------------------------------------->
 
-        </div>
-        <div class="col-sm  center " style="text-align: center;">
-          <a href="Complain.html" style="color: skyblue;">Contact Us   </a><br>
-          <a href="#" style="color: skyblue;">&copy;Om Sagar Textile    </a><br><br>
-        </div>
-      </div>
-    </div>
-  </footer>
+            <footer style="background-color: black; background-color: #86c5da !important;">
+              <div class="container" ><br>
+                <div class="row">
+                  <div class="col-sm center " style="text-align: center;">
+                    <a href="#" style="color: black;">Terms & Condition        </a><br>
+                    <a href="#" style="color: black;">Privacy Policy     </a><br><br>
+                  </div>
+                  <div class="col-sm  center " style="text-align: center;">
+                    <a href="about.html" style="color: black;">About  </a><br>
+                        <a href="contact.html" style="color: black;">Contact us        </a><br><br>
+
+                  </div>
+                  <div class="col-sm  center " style="text-align: center;">
+                    <a href="Complain.html"style="color: black;">Complain Us   </a><br>
+                    <a href="index.html" style="color: black;">Om Sagar Textile    </a><br><br>
+                  </div>
+                </div>
+              </div>
+
+            </footer>
 <!-------------------------------------------------------------------------------------------->
       <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
