--- a/Complain.html
+++ b/Complain.html
@@ -9,73 +9,74 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body style="background-color:aliceblue;" onload=showWarning();>
-  <!--NAVIGATIONBAR----------------------------------------------------------->
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: #0075A2;color: aliceblue; " >
-    <div class="container-fluid" >
-        <div class="navbar-nav me-auto mb-4 mb-lg-0">
-            <a class="container navbar-brand" href="index.html">
-                <img src="img/OM_LOGO.png" alt="logo.png not found" height="100" width="170" class="d-inline-block align-top">
-            </a>
-        </div>
-        <div class="container position-relative">
-            <div class="position-absolute top-50 end-0 translate-middle-y">
-                <div class="" style="padding-right: 27.5mm;">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"  aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+  <!-- navbar---------------------------------------------------------->
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: #0075A2;color: aliceblue;" >
+      <div class="container-fluid" >
+          <div class="navbar-nav me-auto mb-4 mb-lg-0">
+              <a class="container navbar-brand" href="index.html">
+                  <img src="img/OM_LOGO.png" alt="logo.png ni=ot found" height="120" width="180" class="d-inline-block align-top">
+              </a>
+          </div>
 
-                    <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
-                        <ul class="nav navbar-nav navbar-right" >
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">HOME</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link " href="shopping.html">SHOP</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"           data-bs-toggle="dropdown" aria-expanded="false">
-                                    PRODUCTS
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class=" ">
+              <div class="mx-auto" style="width: 600px;">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"  aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                                  <span class="navbar-toggler-icon"></span>
+                              </button>
+
+                      <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+                          <ul class="nav navbar-nav navbar-right" >
+                              <li class="nav-item">
+                                  <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link " href="shopping.html">SHOP</a>
+                              </li>
+                              <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"           data-bs-toggle="dropdown" aria-expanded="false">
+                                      PRODUCTS
+                                  </a>
+                                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="grey_products.html">Grey Products</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="more_product.html">More</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link " href="contact.html">CONTACT</a>
-                            </li>
-                            <li>
-                            <li class="nav-item">
-                                <a class="nav-link " href="about.html">ABOUT</a>
-                            </li>
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
+                                  </ul>
+                              </li>
+                              <li class="nav-item">
+                                  <a class="nav-link " href="contact.html">CONTACT</a>
+                              </li>
+                              <li>
+                              <li class="nav-item">
+                                  <a class="nav-link " href="about.html">ABOUT</a>
+                              </li>
+                              <li class="nav-item dropdown">
+                                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                   MORE
-                                </a>
-                              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                  <li><a class="dropdown-item active" href="Complain.html" target="_blank">Complain</a></li>
-                                  <li><a class="dropdown-item" href="feedback_help.html" target="_blank">Help & Feedback</a></li>
-                                  <li><a class="dropdown-item" href="#" target="_blank">....</a></li>
-                              </ul></li>
-                              &nbsp;&nbsp;
-                            <li class="nav-item">
-                                <a href="nav-link active">
-                                    <svg xmlns="http://www.w3.org/2000/svg" style="color: white;" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
-                                        <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-                                    </svg>
-                                </a>
-                            </li>
+                                  </a>
+                                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                  <li><a class="dropdown-item mx-auto active"  href="Complain.html">Complain</a></li>
+                                  <li><a class="dropdown-item mx-auto"  href="feedback_help.html">Feedback & Help &nbsp;&nbsp;</a></li>
 
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</nav>
+                                  <li><a class="dropdown-item mx-auto"  href="#">...</a></li>
+                                  </ul>
+                              </li>
+
+                              <li class="nav-item">
+                                  <a href="nav-link ">
+                                      <svg xmlns="http://www.w3.org/2000/svg" style="color: white;" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                                          <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                                      </svg>
+                                  </a>
+                              </li>
+                          </ul>
+              </div>
+
+      </div>
+  </nav>
+
   <!--FORM--------------------------------------------------------------->
       <br>
       <div class="container">
@@ -167,28 +168,29 @@
         </section>
       </div>
 <br><br><br>
-<!--FOOTER-------------------------------------------------------->
+<!-- footer ------------------------------------------------------------------------------------------------>
+                <div class="footer">
+                  <footer style="background-color: black; background-color: #86c5da !important;">
+                    <div class="container" ><br>
+                      <div class="row">
+                        <div class="col-sm center " style="text-align: center;">
+                          <a href="#" style="color: black;">Terms & Condition        </a><br>
+                          <a href="#" style="color: black;">Privacy Policy     </a><br><br>
+                        </div>
+                        <div class="col-sm  center " style="text-align: center;">
+                          <a href="about.html" style="color: black;">About  </a><br>
+                              <a href="contact.html" style="color: black;">Contact us        </a><br><br>
 
-            <footer style="background-color: black; background-color: #86c5da !important;">
-              <div class="container" ><br>
-                <div class="row">
-                  <div class="col-sm center " style="text-align: center;">
-                    <a href="#" style="color: black;">Terms & Condition        </a><br>
-                    <a href="#" style="color: black;">Privacy Policy     </a><br><br>
-                  </div>
-                  <div class="col-sm  center " style="text-align: center;">
-                    <a href="about.html" style="color: black;">About  </a><br>
-                        <a href="contact.html" style="color: black;">Contact us        </a><br><br>
+                        </div>
+                        <div class="col-sm  center " style="text-align: center;">
+                          <a href="Complain.html"style="color: black;">Complain Us   </a><br>
+                          <a href="index.html" style="color: black;">Om Sagar Textile    </a><br><br>
+                        </div>
+                      </div>
+                    </div>
 
-                  </div>
-                  <div class="col-sm  center " style="text-align: center;">
-                    <a href="Complain.html"style="color: black;">Complain Us   </a><br>
-                    <a href="index.html" style="color: black;">Om Sagar Textile    </a><br><br>
-                  </div>
+                  </footer>
                 </div>
-              </div>
-
-            </footer>
 <!-- javascript------------------------------------------------------------->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
