--- a/shopping.html
+++ b/shopping.html
@@ -10,7 +10,7 @@
     <!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="/css/footer_file.css">
     <style media="screen">
         body{
           background-color:aliceblue;
@@ -25,7 +25,7 @@
       <div class="container-fluid" >
           <div class="navbar-nav me-auto mb-4 mb-lg-0">
               <a class="container navbar-brand" href="index.html">
-                  <img src="img/OM_LOGO.png" alt="logo.png ni=ot found" height="120" width="180" class="d-inline-block align-top">
+                  <img src="img/OM_LOGO.png" alt="logo.png ni=ot found" height="100" width="160" class="d-inline-block align-top">
               </a>
           </div>
 
