updated index html and css file

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/TFO.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
+                <img src="img/TFO.jpeg" class="d-block w-100  img-fluid" alt="..." height="700px" width="1000px">
               </div>
               <div class="carousel-item">
-                <img src="img/machine.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
+                <img src="img/machine.jpeg" class="d-block w-100  img-fluid" alt="..." height="700px" width="1000px">
               </div>
               <div class="carousel-item">
-                <img src="img/kandi.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
+                <img src="img/kandi.jpeg" class="d-block w-100  img-fluid" alt="..." height="700px" width="1000px">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
@@ -111,9 +111,11 @@
           </div>
         </div>
       </div>
-
+<!--360 Degree--------------------------------------------------------->
       <div class="container">
-      <iframe height="600px" width="100%" allowfullscreen="true" src="https://momento360.com/e/u/a9b53aa8f8b0403ba7a4e18243aabc66"></iframe>
+        <div class="container embed-responsive">      
+          <iframe height="600px" width="100%" allowfullscreen="true" src="https://momento360.com/e/u/a9b53aa8f8b0403ba7a4e18243aabc66"></iframe>
+        </div>
       </div>
 <!--Map--------------------------------------------------------------->
 <!--Google map-->
@@ -134,7 +136,7 @@
                 <div id="founder_details" class="container position-relative">
                         <div class="row">
                           <div class="col">
-                            <div style="align-items: center;" class="container">
+                            <div style="align-items: center;" class="container d-flex" >
 
                               <iframe width="560" height="315" src="https://youtube.com/embed/QHgNoSYlhYs" frameborder="0"
                                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loop  >
@@ -152,44 +154,46 @@
 
 
 <!-- Managment Team--------------------------------->
-<h3 align="center">Managment Team</h3>
-<div class="container">
-     <table width="1000px" align="center">
+<h3 align="center">Managment Team</h3><br>
+<div class="container ">
+  <div class="table-responsive">
+     <table width="1000px" align="center" class="table">
        <tr align="center">
-         <td>
-           <ul class="navbar-nav ml-auto nav-flex-icons">
-             <li class="nav-item avatar">
-               <a class="nav-link p-0" href="#">
-                 <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
-                 alt="avatar image" height="100">
+          <td>
+            <ul class="navbar-nav ml-auto nav-flex-icons">
+              <li class="nav-item avatar">
+                <a class="nav-link p-0" href="#">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0  img-fluid"
+                   alt="avatar image" height="100">
                  <p></p>
                  <p><b>"Smit Kakadiya"</b></p>
-                 <p><b>Mobile NO:7874688779</b></p>
+                 <p><b>Mobile NO:7874688779</b></p></a>
 
-         </td>
-         <td>
-           <ul class="navbar-nav ml-auto nav-flex-icons">
-             <li class="nav-item avatar">
-               <a class="nav-link p-0" href="#">
-                 <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
-                 alt="avatar image" height="100">
+          </td>
+          <td>
+            <ul class="navbar-nav ml-auto nav-flex-icons">
+              <li class="nav-item avatar">
+                <a class="nav-link p-0" href="#">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0 img-fluid"
+                   alt="avatar image" height="100">
                  <p></p>
                  <p><b>"Kishor Anghan"</b></p>
-                 <p><b>Mobile No:9825296500</b></p>
+                 <p><b>Mobile No:9825296500</b></p></a>
         </td>
         <td>
           <ul class="navbar-nav ml-auto nav-flex-icons">
             <li class="nav-item avatar">
               <a class="nav-link p-0" href="#">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
+                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0 img-fluid"
                 alt="avatar image" height="100">
                 <p></p>
                 <p><b>"Vijay Kakadiya"</b></p>
-                <p><b>Mobile No:9638856770</b></p>
+                <p><b>Mobile No:9638856770</b></p></a>
         </td>
        </tr>
-     </table>
-     </div>
+        </table>
+      </div>
+    </div>
 <div class="container">
 <section class="section pb-5" >
   <!--Section heading-->
@@ -255,7 +259,7 @@
     <div class="col-lg-7">
 
       <!--Google map-->
-      <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 400px">
+      <div id="map-container-google-11" class="z-depth-1-half map-container-6 embed-responsive embed-responsive-1by1 d-flex " style="height: 400px">
         <iframe src="https://maps.google.com/maps?q=new%20delphi&t=&z=13&ie=UTF8&iwloc=&output=embed"
           frameborder="0" height="400px" width="700px" style="border:0" allowfullscreen></iframe>
       </div>
