change & update grey_products.html ,add product.css ,product.js file & link index.html/contact in navigation

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <!-- navbar---------------------------------------------------------->
-      <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: #0075A2;color: aliceblue;" >
-        <div class="container-fluid" >
+      <nav class="navbar sticky-top navbar-expand-lg navbar-dark position" style="background: #0075A2;color: aliceblue;" >
+        <div class="container-fluid " >
             <div class="navbar-nav me-auto mb-4 mb-lg-0">
                 <a class="container navbar-brand" href="index.html">
                     <img src="img/OM_LOGO.png" alt="logo.png ni=ot found" height="100" width="160" class="d-inline-block align-top">
@@ -49,7 +49,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link " href="contact.html">CONTACT</a>
+                                    <a class="nav-link " href="#contact">CONTACT</a>
                                 </li>
                                 <li>
                                 <li class="nav-item">
@@ -194,14 +194,14 @@
         </table>
       </div>
     </div>
-<div class="container">
+<div class="container position-relative" id="contact">
 <section class="section pb-5" >
   <!--Section heading-->
   <h2 class="section-heading h1 pt-4">Contact us</h2>
   <!--Section description-->
   <p class="section-description pb-4"></p>
 
-  <div class="row">
+  <div class="row" >
 
     <!--Grid column-->
     <div class="col-lg-5 mb-4" >
