--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAV</title>
+    <title>About</title>
     <link rel="stylesheet" href="OM_sagar_feedback_master_css.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -50,7 +50,7 @@
                                       </ul>
                                   </li>
                                   <li class="nav-item">
-                                      <a class="nav-link " href="contact.html">CONTACT</a>
+                                      <a class="nav-link " href="C:\Users\RAj\Dropbox\My PC (DESKTOP-GI226UK)\Documents\GitHub\omsagar\index.html#contact">CONTACT</a>
                                   </li>
                                   <li>
                                   <li class="nav-item">
