--- a/feedback_help.html
+++ b/feedback_help.html
@@ -44,7 +44,7 @@
                                   </ul>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link " href="contact.html">CONTACT</a>
+                                  <a class="nav-link " href="C:\Users\RAj\Dropbox\My PC (DESKTOP-GI226UK)\Documents\GitHub\omsagar\index.html#contact">CONTACT</a>
                               </li>
                               <li>
                               <li class="nav-item">
