--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                                   </ul>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link active" href="contact.html">CONTACT</a>
+                                  <a class="nav-link active" href="https://github.com/Vedbhanushali/omsagar/index.html#contact">CONTACT</a>
                               </li>
                               <li>
                               <li class="nav-item">
