--- a/Complain.html
+++ b/Complain.html
@@ -46,7 +46,7 @@
                                   </ul>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link " href="https://github.com/Vedbhanushali/omsagar/index.html#contact">CONTACT</a>
+                                  <a class="nav-link " href="index.html#contact">CONTACT</a>
                               </li>
                               <li>
                               <li class="nav-item">
