--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                                       </ul>
                                   </li>
                                   <li class="nav-item">
-                                      <a class="nav-link " href="https://github.com/Vedbhanushali/omsagar/blob/main/index.html#contact">CONTACT</a>
+                                      <a class="nav-link " href="index.html#contact">CONTACT</a>
                                   </li>
                                   <li>
                                   <li class="nav-item">
