add dark mode theme and add modal in complain form

--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <link rel="stylesheet" href="css/footer.css">
-    <style media="screen">
-        body{
-          background-color:aliceblue;
-        }
-    </style>
-
+<link rel="stylesheet" href="css/dark_mode.css">
   </head>
-  <body>
+  <body class="index_body">
     <!-- navbar---------------------------------------------------------->
       <nav class="navbar sticky-top navbar-expand-lg navbar-dark position" style="background: #0075A2;color: aliceblue;" >
         <div class="container-fluid " >
@@ -62,7 +57,55 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <li><a class="dropdown-item mx-auto"  href="Complain.html">Complain</a></li>
                                     <li><a class="dropdown-item mx-auto"  href="feedback_help.html">Feedback & Help &nbsp;&nbsp;</a></li>
+                                    <li> <a class="dropdown-item mx-auto " id="theme">Theme&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+                                
 
+                                      <label class="theme-switch theme-switch-wrapper " for="checkbox">
+                                        <input type="checkbox" id="checkbox" />
+                                        <div class="slider">
+                                          <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="15"
+                                            height="15"
+                                            viewBox="0 0 24 24"
+                                            fill="none"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            class="feather feather-sun"
+                                          >
+                                            
+                                            <path
+                                              d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
+                                            ></path>
+                                          </svg>
+                                          <svg
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            width="15"
+                                            height="15"
+                                            viewBox="0 0 24 24"
+                                            fill="none"
+                                            stroke="currentColor"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            class="feather feather-moon"
+                                          >
+                                          <circle cx="12" cy="12" r="5"></circle>
+                                          <line x1="12" y1="1" x2="12" y2="3"></line>
+                                          <line x1="12" y1="21" x2="12" y2="23"></line>
+                                          <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                                          <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                                          <line x1="1" y1="12" x2="3" y2="12"></line>
+                                          <line x1="21" y1="12" x2="23" y2="12"></line>
+                                          <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                                          <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                                          </svg>
+                                        </div>
+                                      </label>
+                                     </a>
+                                </li>
                                     <li><a class="dropdown-item mx-auto"  href="#">...</a></li>
                                     </ul>
                                 </li>
@@ -145,7 +188,7 @@
                         </div>
                           <div class="col"  style="align-content: center;text-align: justify;">
                             <p >
-                                <em>Cotton is a natural fibre grown on a plant related to the commonly-found garden species hibiscus. Cotton seeds are planted in spring and the plant grows into green, bushy shrubs about one metre in height. During the ginning process, the lint is separated from the seeds and is then pressed into rectangular bales.</em>
+                                <em>Cotton is a natural fibre grown on a plant related to the commonly-found garden species hibiscus. Cotton seeds are planted in spring and the plant grows into green, bushy shrubs  about one metre in height. During the ginning process, the lint is separated from the seeds and is then pressed into rectangular bales.</em>
                             </p>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, vero praesentium. Molestias adipisci consequatur tempora obcaecati voluptas repellat qui sit ex dicta libero fugit aut, sunt est corrupti odit nam!</p>
                           </div>
@@ -154,11 +197,11 @@
 
 
 <!-- Managment Team--------------------------------->
-<h3 align="center">Managment Team</h3><br>
+<h2 class="text-center heading ">Managment Team</h2><br>
 <div class="container ">
   <div class="table-responsive">
-     <table width="1000px" align="center" class="table">
-       <tr align="center">
+     <table width="1000px" class="text-center heading table">
+       <tr class="text-center heading ">
           <td>
             <ul class="navbar-nav ml-auto nav-flex-icons">
               <li class="nav-item avatar">
@@ -322,8 +365,12 @@
 
                   </footer>
                 </div>
-
+<!------javascript--------------------------------------------------------------------------->
 
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+        <script  src="javascript/dark_mode.js" >
+
+        </script>
   </body>
 </html>
