--- a/feedback_help.html
+++ b/feedback_help.html
@@ -8,8 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/feedback_help.css">
+    <link rel="stylesheet" href="css/dark_mode.css">
 </head>
-<body style="background-color:aliceblue;">
+<body >
   <!-- navbar---------------------------------------------------------->
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: #0075A2;color: aliceblue;" >
       <div class="container-fluid" >
@@ -44,7 +46,7 @@
                                   </ul>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link " href="https://github.com/Vedbhanushali/omsagar/index.html#contact">CONTACT</a>
+                                  <a class="nav-link " href="index.html#contact">CONTACT</a>
                               </li>
                               <li>
                               <li class="nav-item">
@@ -57,6 +59,53 @@
                                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                   <li><a class="dropdown-item mx-auto"  href="Complain.html">Complain</a></li>
                                   <li><a class="dropdown-item mx-auto active"  href="feedback_help.html">Feedback & Help &nbsp;&nbsp;</a></li>
+                                  <li> <a class="dropdown-item mx-auto " id="theme">Theme&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+                                    <label class="theme-switch theme-switch-wrapper " for="checkbox">
+                                  <input type="checkbox" id="checkbox" />
+                                  <div class="slider">
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="15"
+                                      height="15"
+                                      viewBox="0 0 24 24"
+                                      fill="none"
+                                      stroke="currentColor"
+                                      stroke-width="2"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                      class="feather feather-sun"
+                                    >
+                                      
+                                      <path
+                                        d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
+                                      ></path>
+                                    </svg>
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="15"
+                                      height="15"
+                                      viewBox="0 0 24 24"
+                                      fill="none"
+                                      stroke="currentColor"
+                                      stroke-width="2"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                      class="feather feather-moon"
+                                    >
+                                    <circle cx="12" cy="12" r="5"></circle>
+                                    <line x1="12" y1="1" x2="12" y2="3"></line>
+                                    <line x1="12" y1="21" x2="12" y2="23"></line>
+                                    <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                                    <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                                    <line x1="1" y1="12" x2="3" y2="12"></line>
+                                    <line x1="21" y1="12" x2="23" y2="12"></line>
+                                    <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                                    <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                                    </svg>
+                                  </div>
+                                </label>
+                               </a>
+                          </li>
 
                                   <li><a class="dropdown-item mx-auto"  href="#">...</a></li>
                                   </ul>
@@ -79,10 +128,10 @@
 <div class="container">
 <section>
 <br>
-  <form  class="form-floating" action="thankyou.html" method="GET">
+  <form  class="form-floating"  action="thankyou.html" method="get">
     <div class="form-group">
     <fieldset >
-        <legend><strong> Feedback Form </strong></legend>
+        <legend><strong><h1 class="text-center heading "> Feedback Form </h1></strong></legend>
         <div class="container"  style="background-color: rgba(0, 0, 0, 0.233);border-radius: 5mm;padding-bottom: 5mm;">
         <div class="mb-3"><br>
           <label for="textInput" class="form-label">Name</label>
@@ -164,10 +213,10 @@
 <section><br>
   <div class="container" >
       <fieldset>
-          <legend> <strong> Help </strong> </legend>
+          <legend> <strong> <h1 class="text-center heading "> Help </h1> </strong> </legend>
       <div class="container" >
-          <div id="accordion">
-              <div class="card">
+          <div id="accordion" >
+              <div class="card dark-mode">
               <div class="card-header" id="headingOne">
                   <h5 class="mb-0">
                   <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -284,7 +333,8 @@
                   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
                    integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
                   </script>
-                  <script src="complain.js"></script>
+              
+                  <script src="javascript/dark_mode.js"></script>
 
         </body>
 </html>
