--- a/thankyou.html
+++ b/thankyou.html
@@ -8,8 +8,32 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/footer.css">
+    <style>
+            
+      :root{
+        --primary-color: aliceblue;
+        --secondary-color: black;
+        --form-background:rgba(0, 0, 0, 0.233);
+        --title-color: #0067e6;
+      }
+
+        [data-theme="dark"] {
+          --primary-color: black;
+          --secondary-color: white;
+          --title-color: #fec150;
+        }
+
+      h1{
+          color: var(--title-color);
+      }
+
+          .bodyy{
+              background: var(--primary-color);
+              color: var(--secondary-color);
+          }
+    </style>
 </head>
-<body style="background-color:aliceblue;">
+<body class="bodyy">
   <!-- navbar---------------------------------------------------------->
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: #0075A2;color: aliceblue;" >
       <div class="container-fluid" >
@@ -57,7 +81,53 @@
                                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                   <li><a class="dropdown-item mx-auto"  href="Complain.html">Complain</a></li>
                                   <li><a class="dropdown-item mx-auto active"  href="feedback_help.html">Feedback & Help &nbsp;&nbsp;</a></li>
-
+                                  <li> <a class="dropdown-item mx-auto " id="theme">Theme&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+                                    <label class="theme-switch theme-switch-wrapper " for="checkbox">
+                                  <input type="checkbox" id="checkbox" />
+                                  <div class="slider">
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="15"
+                                      height="15"
+                                      viewBox="0 0 24 24"
+                                      fill="none"
+                                      stroke="currentColor"
+                                      stroke-width="2"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                      class="feather feather-sun"
+                                    >
+                                      
+                                      <path
+                                        d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
+                                      ></path>
+                                    </svg>
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="15"
+                                      height="15"
+                                      viewBox="0 0 24 24"
+                                      fill="none"
+                                      stroke="currentColor"
+                                      stroke-width="2"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                      class="feather feather-moon"
+                                    >
+                                    <circle cx="12" cy="12" r="5"></circle>
+                                    <line x1="12" y1="1" x2="12" y2="3"></line>
+                                    <line x1="12" y1="21" x2="12" y2="23"></line>
+                                    <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                                    <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                                    <line x1="1" y1="12" x2="3" y2="12"></line>
+                                    <line x1="21" y1="12" x2="23" y2="12"></line>
+                                    <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                                    <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                                    </svg>
+                                  </div>
+                                </label>
+                               </a>
+                          </li>
                                   <li><a class="dropdown-item mx-auto"  href="#">...</a></li>
                                   </ul>
                               </li>
@@ -111,6 +181,6 @@
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+            <script src="javascript/dark_mode.js"> </script>
         </body>
 </html>
