add swing motion in button

--- a/feedback_help.html
+++ b/feedback_help.html
@@ -183,7 +183,7 @@
       &nbsp;&nbsp;
 
               <!-- Button trigger modal -->
-              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-target="#exampleModalCenter" data-placement="bottom" title="Tooltip on bottom" type="submit" value="Submit">
+              <button type="button" class="btn btn-primary" data-toggle="tooltip" data-target="#exampleModalCenter" data-placement="bottom" title="click here to submit form" type="submit" value="Submit">
                 Submit
               </button>
 
