--- a/shopping.html
+++ b/shopping.html
@@ -79,7 +79,7 @@
                                   </ul>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link " href="https://github.com/Vedbhanushali/omsagar/index.html#contact">CONTACT</a>
+                                  <a class="nav-link " href="index.html#contact">CONTACT</a>
                               </li>
                               <li>
                               <li class="nav-item">
@@ -172,7 +172,7 @@
                       </tr>
                   </thead>
                   <tbody>
-
+                    
                       <tr>
                           <td class="col-md-6">
                           <div class="media">
