add animation to the website

--- a/Complain.html
+++ b/Complain.html
@@ -136,10 +136,9 @@
       <br>
       <div class="container">
        <section>
-
+        <strong><h1 class="text-center heading ">Complain Form</h1></strong>
           <form action="thankyou.html" method="get" >
             <fieldset >
-                  <legend><strong><h1 class="text-center heading ">Complain Form</h1></strong></legend>
                   <div class="fieldset_div container" >
                   <div class="mb-3"><br>
                       <label for="textInput" class="form-label">Name *</label>
