--- a/about.html
+++ b/about.html
@@ -139,43 +139,43 @@
     <div class="container">
       <div class="row">
         <div class="section-head col-sm-12">
-          <h4><span>About</span> Us</h4>
-          <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an unknown book.</p>
+          <h4 class="heading text-center"><span >About</span> Us</h4>
+          <p  class="text-center">Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an unknown book.</p>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_one"><i class="fa fa-globe"></i></span>
-            <h6>Modern Design</h6>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          <div class="item text-center"> <span class="icon feature_box_col_one text-center text-center"><i class="fa fa-globe"></i></span>
+            <h6 class="text-center">Modern Design</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer <br> A adipiscing elit.enean commodo ligula eget <br> dolor Aenean massa.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_two"><i class="fa fa-anchor"></i></span>
-            <h6>Creative Design</h6>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          <div class="item  text-center"> <span class="icon feature_box_col_two text-center"><i class="fa fa-anchor"></i></span>
+            <h6 class="text-center">Creative Design</h6>
+            <p> Lorem ipsum dolor sit amet, consectetuer <br> A adipiscing elit.enean commodo ligula eget <br> dolor Aenean massa.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_three"><i class="fa fa-hourglass-half"></i></span>
-            <h6>Your Photoshoping</h6>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          <div class="item text-center"> <span class="icon feature_box_col_three text-center"><i class="fa fa-hourglass-half"></i></span>
+            <h6 class="text-center">Your Photoshoping</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer <br> A adipiscing elit.enean commodo ligula eget <br> dolor Aenean massa.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_four"><i class="fa fa-database"></i></span>
-            <h6>Business Growth</h6>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          <div class="item text-center"> <span class="icon feature_box_col_four text-center"><i class="fa fa-database"></i></span>
+            <h6 class="text-center">Business Growth</h6>
+            <p> Lorem ipsum dolor sit amet, consectetuer <br> A adipiscing elit.enean commodo ligula eget <br> dolor Aenean massa.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_five"><i class="fa fa-upload"></i></span>
-            <h6>Market Strategy</h6>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          <div class="item text-center"> <span class="icon feature_box_col_five text-center"><i class="fa fa-upload"></i></span>
+            <h6 class="text-center">Market Strategy</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer <br> A adipiscing elit.enean commodo ligula eget <br> dolor Aenean massa.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-camera"></i></span>
-            <h6>Retina Ready</h6>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          <div class="item text-center"> <span class="icon feature_box_col_six text-center"><i class="fa fa-camera"></i></span>
+            <h6 class="text-center">Retina Ready</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer <br> A adipiscing elit.enean commodo ligula eget <br> dolor Aenean massa.</p>
           </div>
         </div>
       </div>
