--- a/feedback_help.html
+++ b/feedback_help.html
@@ -127,11 +127,11 @@
 
 <div class="container">
 <section>
-<br>
+<strong><h1 class="text-center heading "> Feedback Form </h1></strong>
   <form  class="form-floating"  action="thankyou.html" method="get">
     <div class="form-group">
     <fieldset >
-        <legend><strong><h1 class="text-center heading "> Feedback Form </h1></strong></legend>
+        <legend></legend>
         <div class="container "  style="background-color: rgba(0, 0, 0, 0.233);border-radius: 5mm;padding-bottom: 5mm;">
         <div class="mb-3"><br>
           <label for="textInput" class="form-label">Name</label>
