--- a/index.html
+++ b/index.html
@@ -173,20 +173,20 @@
 
 <!--FOUNDER-------------------------------------------------------->
           <br><br>
-            <h2 style="text-align: center;">How Gray Products are manufactured</h2><br><br>
+            <h2 class="text-center heading">How Gray Products are manufactured</h2><br><br>
             <section  id="founder" >
 
                 <div id="founder_details" class="container position-relative">
                         <div class="row">
                           <div class="col">
-                            <div style="align-items: center;" class="container d-flex" >
+                            <div style="align-items: center;" class="container d-flex founder_video" >
 
                               <iframe width="560" height="315" src="https://youtube.com/embed/QHgNoSYlhYs" frameborder="0"
                                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loop  >
                               </iframe><br><br>
                           </div>
                         </div>
-                          <div class="col"  style="align-content: center;text-align: justify;">
+                          <div class="col founder_info"  style="align-content: center;text-align: justify;">
                             <p >
                                 <em>Cotton is a natural fibre grown on a plant related to the commonly-found garden species hibiscus. Cotton seeds are planted in spring and the plant grows into green, bushy shrubs  about one metre in height. During the ginning process, the lint is separated from the seeds and is then pressed into rectangular bales.</em>
                             </p>
@@ -197,7 +197,7 @@
 
 
 <!-- Managment Team--------------------------------->
-<h2 class="text-center heading ">Managment Team</h2><br>
+<h1 class="text-center heading ">Managment Team</h1><br>
 <div class="container ">
   <div class="table-responsive">
      <table width="1000px" class="text-center heading table">
@@ -240,7 +240,7 @@
 <div class="container position-relative" id="contact">
 <section class="section pb-5" >
   <!--Section heading-->
-  <h2 class="section-heading h1 pt-4">Contact us</h2>
+  <h2 class="section-heading h1 pt-4 text-center">Contact us</h2>
   <!--Section description-->
   <p class="section-description pb-4"></p>
 
