--- a/shopping.html
+++ b/shopping.html
@@ -40,6 +40,38 @@
                 background: var(--primary-color);
                 color: var(--secondary-color);
             }
+          
+            /* Animation */
+
+            table{
+
+            white-space: nowrap;
+            overflow: hidden;    
+            text-align: justify;
+
+            }
+
+            table{
+            animation: animated-text 1s linear 1s 1 normal both,
+                    animated-cursor 600ms linear infinite;
+            position: sticky;
+            }
+
+            /* text animation */
+
+            @keyframes animated-text{
+            from{max-width: 0;text-align: justify;visibility: hidden;}
+            to{max-width: 100%;text-align: justify;visibility: visible;}
+            }
+
+            /* cursor animations */
+
+            @keyframes animated-cursor{
+            from{border-right-color: var(--border-cursor-color); }
+            to{border-right-color: transparent;}
+            }
+
+
     </style>
 </head>
 
