--- a/thankyou.html
+++ b/thankyou.html
@@ -15,12 +15,14 @@
         --secondary-color: black;
         --form-background:rgba(0, 0, 0, 0.233);
         --title-color: #0067e6;
+        --border-cursor-color : rgba(255,255,255,.75);
       }
 
         [data-theme="dark"] {
           --primary-color: black;
           --secondary-color: white;
           --title-color: #fec150;
+          --border-cursor-color : black;  
         }
 
       h1{
@@ -31,6 +33,38 @@
               background: var(--primary-color);
               color: var(--secondary-color);
           }
+          
+      h1,p{
+
+        white-space: nowrap;
+        overflow: hidden;    
+        text-align: justify;
+
+        }
+
+        /* Animation */
+        h1,p  {
+        animation: animated-text 1s linear 1s 1 normal both,
+                  animated-cursor 600ms linear infinite;
+        position: sticky;
+        }
+
+
+
+        /* text animation */
+
+        @keyframes animated-text{
+          from{max-width: 0;text-align: justify;visibility: hidden;}
+          to{max-width: 100%;text-align: justify;visibility: visible;}
+        }
+
+        /* cursor animations */
+
+        @keyframes animated-cursor{
+          from{border-right-color: var(--border-cursor-color); }
+          to{border-right-color: transparent;}
+        }
+
     </style>
 </head>
 <body class="bodyy">
