--- a/cart.html
+++ b/cart.html
@@ -225,7 +225,7 @@
                                           <div id="myModal" class="modal">
                       
                                             <!-- Modal content -->
-                                            <div class="modal-content" >
+                                            <div class="modal-content modal-responsive" >
                                               <div class="modal-dialog modal-dialog-centered" role="document">
                                                 <div class="modal-content">
                                                   <div class="modal-header">
